feat: 实现1.0.2版本

--- a/examples/vue3/tsconfig.json
+++ b/examples/vue3/tsconfig.json
@@ -14,13 +14,10 @@
     "noEmit": true,
     "paths": {
       "@web-tracing/core": ["../../packages/core/index.ts"],
-      "@web-tracing/core/*": ["../../packages/core/*"],
+      "@web-tracing/core/*": ["../../packages/core/*"]
       // "@web-tracing/component": ["./packages/component/index.ts"],
     },
-    "types": [
-      "vite/client"
-    ]
+    "types": ["vite/client"]
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
