--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@virtual-monitor/monorepo",
-  "version": "0.2.0",
-  "description": "前端监控插件,支持[行为、性能、异常、请求、资源、路由、曝光]监控",
+  "name": "virtual-watcher",
+  "version": "1.0.1",
+  "description": "前端监听用户网络状态SDK,可用于需获取用户网络状态的业务场景",
   "private": true,
   "scripts": {
-    "build": "pnpm run update && esno scripts/build.ts",
+    "clean": "rimraf --glob dist types \"packages/*/dist\"",
+    "build": "esno scripts/build.ts",
     "build:rollup": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c",
     "build:rollup-watch": "cross-env NODE_OPTIONS=\"--max-old-space-size=6144\" rollup -c -w",
     "publish": "esno scripts/publish.ts",
-    "test:vue3": "pnpm run -C examples/vue3 start",
+    "test:vue3": "pnpm run -C examples/vue3 start"
   },
   "keywords": [
-    "埋点",
+    "网络情况",
     "性能",
-    "异常",
-    "性能埋点",
-    "异常埋点",
-    "前端埋点"
+    "监控",
+    "前端监控"
   ],
   "author": "yechao email:1151062047@qq.com",
   "license": "MIT",
@@ -45,6 +44,6 @@
     "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
     "rollup-plugin-esbuild": "^5.0.0",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.2"
   }
 }
